--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>My weather application</title>
+    <title>Marina's weather app</title>
   </head>
   <body>
     <div class="weather-app">
