Added link to GitHub account

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Marina P.R.</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/MarinaPerezR" target="_blank"
+            >Marina P.R.</a
+          >
+          and is <a href="#" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
