--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
           <a href="https://github.com/MarinaPerezR" target="_blank"
             >Marina P.R.</a
           >
-          and is <a href="#" target="_blank"> on GitHub</a> and
+          and is
+          <a
+            href="https://github.com/MarinaPerezR/weather-app-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
